Add README files, enhance SEO metadata, and include image resources and license

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Conecta con cuidadores confiables para paseos, cuidado temporal, baño y peluquería de mascotas. Tranquilidad para ti, bienestar para tu mascota." />
+  <meta property="og:title" content="PetCare | Cuidado confiable para tu mascota" />
+  <meta property="og:description" content="Encuentra cuidadores verificados para paseos y cuidado de mascotas." />
+  <meta property="og:image" content="https://petcare-six-kohl.vercel.app/img/og-image.webp" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://petcare-six-kohl.vercel.app" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
