--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/webp" href="img/petcare-logo.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Conecta con cuidadores confiables para paseos, cuidado temporal, baño y peluquería de mascotas. Tranquilidad para ti, bienestar para tu mascota." />
